# locateanything-optimization

./: LICENSE  README.md  pyproject.toml
benchmarks/: README.md  throughput.py
locateanything_optimization/: __init__.py  vision.py
tests/: test_packed_sdpa.py
