[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locateanything-optimization"
version = "0.1.0"
description = "Packed batched-SDPA vision speedup for NVIDIA LocateAnything-3B (~4.6x, no quality regression)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "PerceptGrid contributors" }]
keywords = ["locateanything", "vision-language-model", "sdpa", "inference", "optimization"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
test = ["pytest>=7"]
bench = ["pillow", "transformers>=4.45"]

[project.urls]
Homepage = "https://github.com/zji996/locateanything-optimization"

[tool.setuptools.packages.find]
include = ["locateanything_optimization*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
